--- a/pizzaDoFelipe_J.html
+++ b/pizzaDoFelipe_J.html
@@ -3,100 +3,124 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="pizza.css">
+<script>
+    function validarFormulario() {
+    var nome = document.getElementById('nome').value.trim();
+    var telefone = document.getElementById('telefone').value.trim();
+    var email = document.getElementById('email').value.trim();
+    var cpf = document.getElementById('cpf').value.trim();
+    var street = document.getElementById('street').value.trim();
+    var bairro = document.getElementById('bairro').value.trim();
+    var number = document.getElementById('number').value.trim();
+    var cep = document.getElementById('cep').value.trim();
+    complemento = document.getElementById('complemento').value.trim();
+    var senha = document.getElementById('senha').value.trim();
+    var confirmarSenha = document.getElementById('confirmarsenha').value.trim();
+
+    var camposValidos = true;
+
+    if (nome === '') {
+        document.getElementById('nome').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('nome').classList.remove('error');
+    }
+
+    var telefoneRegex = /^\([0-9]{2}\) [0-9]{5}-[0-9]{4}$/;
+    if (!telefoneRegex.test(telefone)) {
+        document.getElementById('telefone').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('telefone').classList.remove('error');
+    }
+
+    var emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+    if (!emailRegex.test(email)) {
+        document.getElementById('email').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('email').classList.remove('error');
+    }
+
+    var cpfRegex = /^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$/
+    if (!cpfRegex.test(cpf)) {
+        document.getElementById('cpf').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('cpf').classList.remove('error');
+    }
+
+    if (street === '') {
+        document.getElementById('street').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('street').classList.remove('error');
+    }
+
+    if (bairro === '') {
+        document.getElementById('bairro').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('bairro').classList.remove('error');
+    }
+
+    if (number === '') {
+        document.getElementById('number').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('number').classList.remove('error');
+    }
+
+    var cepRegex = /^[0-9]{5}-[0-9]{3}$/;
+    if (!cepRegex.test(cep)) {
+        document.getElementById('cep').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('cep').classList.remove('error');
+    }
+
+    if (senha === '' || senha !== confirmarSenha) {
+        document.getElementById('senha').classList.add('error');
+        document.getElementById('confirmarsenha').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('senha').classList.remove('error');
+        document.getElementById('confirmarsenha').classList.remove('error');
+    }
+
+    if (camposValidos) {
+        alert('Formulário enviado com sucesso!');
+    } else {
+        alert('Por favor, preencha todos os campos corretamente.');
+    }
+}
+</script>
 <title>Cadastro Funcionário</title>
 </head>
 <body>
-
+    
 <h1>Cadastro Funcionário</h1>
 
-<div class="Funcionario">
+<div class="Cadastro-funcionario">
     <hr>
-    <p><label>Nome: <input type="text" id="name"></label></p>
-    <p><input type="tel" id="Telefone" name="Telefone" placeholder="(11)12345-6789" pattern="([0-9]{2}) [0-9]{5}-[0-9]{4}"><br></p>
-    <p><label>CPF: <input type="text" id="cpf"></label></p>
-    <p><label>Email: <input type="email" id="email"></label></p>
-    <p><label>Rua: <input type="text" id="street"></label></p>
-    <p><label>Bairro: <input type="text" id="bairro"></label></p>
-    <p><label>Número: <input type="text" id="number"></label></p>
-    <p><label>CEP: <input type="text" id="cep"></label></p>
-    <p><label>Complemento: <input type="text" id="complemento"></label></p>
-    <input class="Botao" type="button" value="Cadastrar" onclick="validarCadastro()">
+    <p><label for="nome">Nome: <input type="text" id="nome"></label></p> 
+    <p><label for="telefone">Telefone: <input type="tel" id="telefone" placeholder="(11) 12345-6789" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"></label></p>
+    <p><label for="email">Email: <input type="email" id="email"></label></p>
+    <p><label for="cpf">CPF: <input type="cpf" id="cpf" placeholder="123.456.789-12" pattern="/^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$/"></label></p>
+    <p><label for="cep">CEP: <input type="cep" id="cep" placeholder="12345-678" pattern="\[0-9]{5}-[0-9]{3}"></label></p>
+    <p><label for="street">Rua: <input type="text" id="street"></label></p>
+    <p><label for="bairro">Bairro: <input type="text" id="bairro"></label></p>
+    <p><label for="number">Número: <input type="text" id="number"></label></p>
+    <p><label for="complemento">Complemento: <input type="text" id="complemento"></label></p>
+    <p><label for="senha">Digite a sua senha: <input type="password" id="senha"></label></p>
+    <p><label for="confirmarsenha">Confirmar a sua senha: <input type="password" id="confirmarsenha"></label></p>
+    <br>
+    <input class="Botao" type="button" value="Cadastrar" onclick="validarFormulario()">
 </div>
+
 <footer>
     <hr>
     Copyright &copy; Pizza hub 2024
 </footer>
-
-<script>
-    function validarCadastro() {
-        var name = document.getElementById('name').value.trim();
-        var tell = document.getElementById('tell').value.trim();
-        var cpf = document.getElementById('cpf').value.trim();
-        var email = document.getElementById('email').value.trim();
-        var street = document.getElementById('street').value.trim();
-        var bairro = document.getElementById('bairro').value.trim();
-        var number = document.getElementById('number').value.trim();
-        var cep = document.getElementById('cep').value.trim();
-        var complemento = document.getElementById('complemento').value.trim();
-
-        var camposValidos = true;
-
-        if (name === '') {
-            document.getElementById('name').classList.add('error');
-            camposValidos = false;
-        } else {
-            document.getElementById('name').classList.remove('error');
-        }
-        if (tell === '' || isNaN(tell) || tell.length !== 11) {
-            document.getElementById('tell').classList.add('error');
-            camposValidos = false;
-        } else {
-            document.getElementById('tell').classList.remove('error');
-        }
-        if (cpf === '' || isNaN(cpf) || cpf.length !== 11) {
-            document.getElementById('cpf').classList.add('error');
-            camposValidos = false;
-        } else {
-            document.getElementById('cpf').classList.remove('error');
-        }
-        var emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-        if (!emailRegex.test(email)) {
-            document.getElementById('email').classList.add('error');
-            camposValidos = false;
-        } else {
-            document.getElementById('email').classList.remove('error');
-        }
-        if (street === '') {
-            document.getElementById('street').classList.add('error');
-            camposValidos = false;
-        } else {
-            document.getElementById('street').classList.remove('error');
-        }
-        if (bairro === '') {
-            document.getElementById('bairro').classList.add('error');
-            camposValidos = false;
-        } else {
-            document.getElementById('bairro').classList.remove('error');
-        }
-        if (number === '' || isNaN(number)) {
-            document.getElementById('number').classList.add('error');
-            camposValidos = false;
-        } else {
-            document.getElementById('number').classList.remove('error');
-        }
-        if (cep === '' || isNaN(cep) || cep.length !== 8) {
-            document.getElementById('cep').classList.add('error');
-            camposValidos = false;
-        } else {
-            document.getElementById('cep').classList.remove('error');
-        }
-        if (camposValidos) {
-            alert('Cadastro realizado com sucesso!');
-        } else {
-            alert('Por favor, preencha todos os campos corretamente.');
-        }
-    }
-</script>
-
 </body>
 </html>
