--- a/pizzaDoEduardo_C.html
+++ b/pizzaDoEduardo_C.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pizza.css">
-    <script src="pizza.js" defer></script>
+    <script>
+            function validarFormulario() {
+    var nome = document.getElementById('nome').value.trim();
+    var telefone = document.getElementById('telefone').value.trim();
+    var email = document.getElementById('email').value.trim();
+    var cpf = document.getElementById('cpf').value.trim();
+    var senha = document.getElementById('senha').value.trim();
+    var confirmarSenha = document.getElementById('confirmarsenha').value.trim();
+
+    var camposValidos = true;
+
+    if (nome === '') {
+        document.getElementById('nome').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('nome').classList.remove('error');
+    }
+
+    var telefoneRegex = /^\([0-9]{2}\) [0-9]{5}-[0-9]{4}$/;
+    if (!telefoneRegex.test(telefone)) {
+        document.getElementById('telefone').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('telefone').classList.remove('error');
+    }
+
+    var emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+    if (!emailRegex.test(email)) {
+        document.getElementById('email').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('email').classList.remove('error');
+    }
+
+    var cpfRegex = /^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$/
+    if (!cpfRegex.test(cpf)) {
+        document.getElementById('cpf').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('cpf').classList.remove('error');
+    }
+
+    if (senha === '' || senha !== confirmarSenha) {
+        document.getElementById('senha').classList.add('error');
+        document.getElementById('confirmarsenha').classList.add('error');
+        camposValidos = false;
+    } else {
+        document.getElementById('senha').classList.remove('error');
+        document.getElementById('confirmarsenha').classList.remove('error');
+    }
+
+    if (camposValidos) {
+        alert('Formulário enviado com sucesso!');
+    } else {
+        alert('Por favor, preencha todos os campos corretamente.');
+    }
+}
+    </script>
     <title>Cadastro pessoal</title>
 </head>
 <body>
@@ -16,12 +72,12 @@
             <h2>Cadastro</h2>
             <div class="Cadastro-pessoal">
                 <hr>
-                <p><label for="Nome">Nome: <input type="text" id="Nome"></label></p> 
-                <p><label for="Telefone">Telefone: <input type="tel" id="Telefone" name="Telefone" placeholder="(11) 12345-6789" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"></label></p>
-                <p><label for="Email">Email: <input type="email" id="Email"></label></p>
-                <p><label for="CPF">CPF: <input type="text" id="CPF"></label></p>
-                <p><label for="Senha">Digite a sua senha: <input type="password" id="Senha"></label></p>
-                <p><label for="ConfirmarSenha">Confirmar a sua senha: <input type="password" id="ConfirmarSenha"></label></p>
+                <p><label for="nome">Nome: <input type="text" id="nome"></label></p> 
+                <p><label for="telefone">Telefone: <input type="tel" id="telefone" placeholder="(11) 12345-6789" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"></label></p>
+                <p><label for="email">Email: <input type="email" id="email"></label></p>
+                <p><label for="cpf">CPF: <input type="cpf" id="cpf" placeholder="123.456.789-12" pattern="/^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$/"></label></p>
+                <p><label for="senha">Digite a sua senha: <input type="password" id="senha"></label></p>
+                <p><label for="confirmarsenha">Confirmar a sua senha: <input type="password" id="confirmarsenha"></label></p>
                 <br>
                 <input class="Botao" type="button" value="Cadastrar" onclick="validarFormulario()">
             </div>
