--- a/pizzaDoFelipe_J.html
+++ b/pizzaDoFelipe_J.html
@@ -98,14 +98,14 @@
 <title>Cadastro Funcionário</title>
 </head>
 <body>
-    
+
 <h1>Cadastro Funcionário</h1>
 
 <div class="Cadastro-funcionario">
     <hr>
     <p><label for="nome">Nome: <input type="text" id="nome"></label></p> 
     <p><label for="telefone">Telefone: <input type="tel" id="telefone" placeholder="(11) 12345-6789" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"></label></p>
-    <p><label for="email">Email: <input type="email" id="email"></label></p>
+    <p><label for="email">Email: <input type="email" id="email" placeholder="exemplo@gmail.com"></label></p>
     <p><label for="cpf">CPF: <input type="cpf" id="cpf" placeholder="123.456.789-12" pattern="/^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$/"></label></p>
     <p><label for="cep">CEP: <input type="cep" id="cep" placeholder="12345-678" pattern="\[0-9]{5}-[0-9]{3}"></label></p>
     <p><label for="street">Rua: <input type="text" id="street"></label></p>
