--- a/pizzaDoEduardo_C.html
+++ b/pizzaDoEduardo_C.html
@@ -74,7 +74,7 @@
                 <hr>
                 <p><label for="nome">Nome: <input type="text" id="nome"></label></p> 
                 <p><label for="telefone">Telefone: <input type="tel" id="telefone" placeholder="(11) 12345-6789" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}"></label></p>
-                <p><label for="email">Email: <input type="email" id="email"></label></p>
+                <p><label for="email">Email: <input type="email" id="email" placeholder="exemplo@gmail.com"></label></p>
                 <p><label for="cpf">CPF: <input type="cpf" id="cpf" placeholder="123.456.789-12" pattern="/^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$/"></label></p>
                 <p><label for="senha">Digite a sua senha: <input type="password" id="senha"></label></p>
                 <p><label for="confirmarsenha">Confirmar a sua senha: <input type="password" id="confirmarsenha"></label></p>
