--- a/pizzaDoLucas_M.html
+++ b/pizzaDoLucas_M.html
@@ -55,6 +55,9 @@
                 <option value="credito">Cartão de Credito</option>
                 <option value="debito">Cartão de Debito</option>
             </select>
+            <label for="comentarios">Comentários:</label><br>
+            <textarea id="comentarios" name="comentarios" rows="4" cols="50"></textarea><br>
+
 
         <p>
             <input class="Botao" type="button" value="Cadastrar" onclick="validarPedido()">
