--- a/pizzaDoLucas_M.html
+++ b/pizzaDoLucas_M.html
@@ -7,7 +7,7 @@
 <title>Cadastro Pedidos</title>
 </head>
 <body>
-    <caption><h1>Cadastro Pedidos</h1></caption>
+        <h1>Cadastro Pedidos</h1>
     <main>
     <form id="orderForm">
         <hr>
