--- a/pizzaDoEduardo_C.html
+++ b/pizzaDoEduardo_C.html
@@ -60,6 +60,20 @@
         alert('Por favor, preencha todos os campos corretamente.');
     }
 }
+
+function mostrarsenha(){
+    var senhaInput = document.getElementById('senha');
+    var tipoSenha = senhaInput.getAttribute('type');
+    var olho = document.getElementById('olho');
+
+    if (tipoSenha === 'password') {
+        senhaInput.setAttribute('type', 'text');
+        olho.src ="olho-aberto.png";
+    } else {
+        senhaInput.setAttribute('type', 'password');
+        olho.src ="olho-fechado.png";
+    }
+}
     </script>
     <title>Cadastro pessoal</title>
 </head>
@@ -77,6 +91,8 @@
                 <p><label for="email">Email: <input type="email" id="email" placeholder="exemplo@gmail.com"></label></p>
                 <p><label for="cpf">CPF: <input type="cpf" id="cpf" placeholder="123.456.789-12" pattern="/^[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}$/"></label></p>
                 <p><label for="senha">Digite a sua senha: <input type="password" id="senha"></label></p>
+                <img id="olho" src="olho-fechado.png" alt="Mostrar Senha" width="20" height="20">
+                <input class="Botao" type="button" value="Mostrar Senha" onclick="mostrarsenha()">
                 <p><label for="confirmarsenha">Confirmar a sua senha: <input type="password" id="confirmarsenha"></label></p>
                 <br>
                 <input class="Botao" type="button" value="Cadastrar" onclick="validarFormulario()">
