--- a/pizzaDoLucas_M.html
+++ b/pizzaDoLucas_M.html
@@ -7,7 +7,7 @@
 <title>Cadastro Pedidos</title>
 </head>
 <body>
-        <caption></caption><h1>Cadastro Pedidos</h1><caption/>
+        <caption><h1>Cadastro Pedidos</h1><caption/>
     <main>
     <form id="orderForm">
         <hr>
